--- a/TestcontainersMySqlSample.IntegrationTests/TestcontainersMySqlSample.IntegrationTests.csproj
+++ b/TestcontainersMySqlSample.IntegrationTests/TestcontainersMySqlSample.IntegrationTests.csproj
@@ -13,7 +13,8 @@
 	<PackageReference Include="FluentAssertions" Version="6.8.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-    <PackageReference Include="Testcontainers" Version="2.3.0" />
+    <PackageReference Include="Testcontainers" Version="3.1.0" />
+    <PackageReference Include="Testcontainers.MySql" Version="3.1.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestcontainersSample\TestcontainersSample.csproj" />
+    <ProjectReference Include="..\TestcontainersMySqlSample\TestcontainersMySqlSample.csproj" />
   </ItemGroup>
 
 </Project>
